# Rabobank-MCP-training

./: .env.example  README.md  index.html  index2..html  index2.html  mcp-extension-lab.html  mcp-extension-trainer-answer-key.html  pyproject.toml
app/: __init__.py  data.py  internal_api.py  mcp_server.py  run_api.py
scripts/: demo-calls.ps1  demo-calls.sh
