[project]
name = "rabobank-internal-mcp-uv-demo"
version = "0.1.0"
description = "Minimal internal MCP server demo using uv, FastAPI and FastMCP. Contains fake banking data only."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
bank-api = "app.run_api:main"
bank-mcp = "app.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
